# docs/api/api.yaml
@@ -12,20 +12,20 @@ tags:
   - name: user
     description: Operations about user
 paths:
-  /user/{userId}:
+  /user/{username}:
     get:
       parameters:
-        - name: userId
+        - name: username
           in: path
-          description: ID of user
+          description: username
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       tags:
         - user
-      description: Returns a user based on a single ID, if the user does not have access to the user
-      operationId: find user by id
+
+      description: Returns a user based on a single username, if the user does not have access to the user
+      operationId: find user by username
       responses:
         '200':
           description: user response
@@ -39,6 +39,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
+  /user/{userId}:
+#    get:
+#      parameters:
+#        - name: userId
+#          in: path
+#          description: ID of user
+#          required: true
+#          schema:
+#            type: integer
+#            format: int64
+#      tags:
+#        - user
+#      description: Returns a user based on a single ID, if the user does not have access to the user
+#      operationId: find user by id
+#      responses:
+#        '200':
+#          description: user response
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/User'
+#        "400":
+#          description: Bad Request
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/Error'
     delete:
       parameters:
         - name: userId
@@ -127,7 +155,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+      tags:
+        - auth
+
   /sign-up:
+    servers:
+      - url: /
     post:
       summary: sign-up
       description: sign-up a new user
@@ -168,8 +201,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+      tags:
+        - auth
 
   /sign-in:
+    servers:
+      - url: /
     post:
       summary: sign-in
       description: sign-up a new user
@@ -199,6 +236,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+      tags:
+        - auth
 
 components:
   schemas:
