# internal/transport/http/auth/user.go
@@ -7,8 +7,33 @@ import (
 	"strconv"
 )
 
+func (s *Server) FindUserByUsername(w http.ResponseWriter, r *http.Request, username string) {
+	if err := accessStatus(r, nil, &username); err != nil {
+		w.WriteHeader(http.StatusForbidden)
+		w.Write([]byte(err.Error()))
+		return
+	}
+
+	user, err := s.authService.FindUserByUsername(r.Context(), username)
+	if err != nil {
+		w.WriteHeader(http.StatusNotFound)
+		w.Write([]byte(err.Error()))
+		return
+	}
+	resp := user.ToResponse()
+
+	userBytes, err := json.Marshal(resp)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(err.Error()))
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Write(userBytes)
+}
 func (s *Server) DeleteUser(w http.ResponseWriter, r *http.Request, userId int64) {
-	if err := accessStatus(r, userId); err != nil {
+	if err := accessStatus(r, &userId, nil); err != nil {
 		w.WriteHeader(http.StatusForbidden)
 		w.Write([]byte(err.Error()))
 		return
@@ -26,12 +51,11 @@ func (s *Server) DeleteUser(w http.ResponseWriter, r *http.Request, userId int64
 }
 
 func (s *Server) FindUserById(w http.ResponseWriter, r *http.Request, userId int64) {
-	if err := accessStatus(r, userId); err != nil {
+	if err := accessStatus(r, &userId, nil); err != nil {
 		w.WriteHeader(http.StatusForbidden)
 		w.Write([]byte(err.Error()))
 		return
 	}
-
 	user, err := s.authService.FindUserBydID(r.Context(), int(userId))
 	if err != nil {
 		w.WriteHeader(http.StatusNotFound)
@@ -50,7 +74,7 @@ func (s *Server) FindUserById(w http.ResponseWriter, r *http.Request, userId int
 }
 
 func (s *Server) UpdateUser(w http.ResponseWriter, r *http.Request, userId int64) {
-	if err := accessStatus(r, userId); err != nil {
+	if err := accessStatus(r, &userId, nil); err != nil {
 		w.WriteHeader(http.StatusForbidden)
 		w.Write([]byte(err.Error()))
 		return
@@ -81,13 +105,28 @@ func (s *Server) UpdateUser(w http.ResponseWriter, r *http.Request, userId int64
 	w.Write([]byte("updated successfully"))
 }
 
-func accessStatus(r *http.Request, userId int64) error {
+func accessStatus(r *http.Request, userId *int64, username *string) error {
 	userID, err := strconv.ParseInt(r.Context().Value("user_id").(string), 10, 64)
 	if err != nil {
 		return fmt.Errorf("you are not allowed to perform this action")
 	}
-	if userID != userId {
+
+	if userId == nil && username == nil {
 		return fmt.Errorf("you are not allowed to perform this action")
+	}
+
+	usernamectx := r.Context().Value("username").(string)
+	if username != nil {
+		if usernamectx != *username {
+			return fmt.Errorf("you are not allowed to perform this action")
+		}
+	}
+
+	if userId != nil {
+		if userID != *userId {
+			return fmt.Errorf("you are not allowed to perform this action")
+		}
+
 	}
 
 	return nil
